backends/drm: wait for the pageflip to be done with the condition variable

...instead of busy looping, which is causing several percent CPU usage in some cases

BUG: 479126


(cherry picked from commit d4a3d6689ea2cd75427b3c3efedd654c6e38d30d)